got the middle section css looking a bit better

--- a/index.html
+++ b/index.html
@@ -44,14 +44,30 @@
     <section id="projects">
         <div class="container">
             <div class="boxes">
-                <div class="box1">Project1</div>
-                <div class="box2">Project2</div>
-                <div class="box3">Project3</div>
-                <div class="box4">Project4</div>
-                <div class="box5">Project5</div>
-                <div class="box6">Project6</div>
-                <div class="box7">Project7</div>
-                <div class="box8">Project8</div>
+                <div class="box1">
+                    <img src="images/BW_pfp.PNG" alt="">
+                    <p>Project1</p></div>
+                <div class="box2">
+                    <img src="images/BW_pfp.PNG" alt="">
+                    <p>Project2</p></div>
+                <div class="box3">
+                    <img src="images/BW_pfp.PNG" alt="">
+                    <p>Project3</p></div>
+                <div class="box4">
+                    <img src="images/BW_pfp.PNG" alt="">
+                    <p>Project4</p></div>
+                <div class="box5">
+                    <img src="images/BW_pfp.PNG" alt="">
+                    <p>Project5</p></div>
+                <div class="box6">
+                    <img src="images/BW_pfp.PNG" alt="">
+                    <p>Project6</p></div>
+                <div class="box7">
+                    <img src="images/BW_pfp.PNG" alt="">
+                    <p>Project7</p></div>
+                <div class="box8">
+                    <img src="images/BW_pfp.PNG" alt="">
+                    <p>Project8</p></div>
             </div>
         </div>
     </section>
