--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="style/index.css">
@@ -16,15 +17,13 @@
     <header>
         <div class="title">
             <h1>John C. Sime</h1>
-        </div>
-        <nav>
-            <div class="links">
+            <nav class="links">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a>
                 <a href="#projects">Projects</a>
-            </div>
-        </nav>
+            </nav>
+        </div>
     </header>
     <section id="about" class="face-img">
         <div class="pfp">
