Changed up the font and color scheme

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="style/index.css">
@@ -44,28 +43,28 @@
         <div class="container">
             <div class="boxes">
                 <div class="box1">
-                    <img src="images/BW_pfp.PNG" alt="">
+                    <img src="images/pic1.jpg" alt="">
                     <p>Project1</p></div>
                 <div class="box2">
-                    <img src="images/BW_pfp.PNG" alt="">
+                    <img src="images/pic2.jpg" alt="">
                     <p>Project2</p></div>
                 <div class="box3">
-                    <img src="images/BW_pfp.PNG" alt="">
+                    <img src="images/pic3.jpg" alt="">
                     <p>Project3</p></div>
                 <div class="box4">
-                    <img src="images/BW_pfp.PNG" alt="">
+                    <img src="images/pic4.jpg" alt="">
                     <p>Project4</p></div>
                 <div class="box5">
-                    <img src="images/BW_pfp.PNG" alt="">
+                    <img src="images/pic5.jpg" alt="">
                     <p>Project5</p></div>
                 <div class="box6">
-                    <img src="images/BW_pfp.PNG" alt="">
+                    <img src="images/pic6.jpg" alt="">
                     <p>Project6</p></div>
                 <div class="box7">
-                    <img src="images/BW_pfp.PNG" alt="">
+                    <img src="images/pic7.jpg" alt="">
                     <p>Project7</p></div>
                 <div class="box8">
-                    <img src="images/BW_pfp.PNG" alt="">
+                    <img src="images/pic8.jpg" alt="">
                     <p>Project8</p></div>
             </div>
         </div>
