Cleaned up the code a bit and took out placeholders

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="title">
             <h1>John C. Sime</h1>
             <nav class="links">
-                <a href="#home">Home</a>
+                <a href="#about">Home</a>
                 <a href="#about">About</a>
-                <a href="#contact">Contact</a>
                 <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
             </nav>
         </div>
     </header>
@@ -35,7 +35,7 @@
             <div class="pj_button">
                 <button>My Projects</button>
             </div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima impedit culpa sunt. Quos deserunt, soluta corporis optio totam molestias quaerat aliquam neque consequuntur sit enim quasi modi recusandae voluptatem. Possimus!</p>
+                <p>I've been intrested in coding since high school but only as a hobby. It wasn't until the age of 20 that I realized it could be my career, but by then I had a lot of road blocks preventing me from pursuing a career. Now at the age of 25 I'm finally taking the plunge and starting  </p>
             </div>
         </div>
     </section>
@@ -44,32 +44,32 @@
             <div class="boxes">
                 <div class="box1">
                     <img src="images/pic1.jpg" alt="">
-                    <p>Project1</p></div>
+                    <p>My First Project</p></div>
                 <div class="box2">
                     <img src="images/pic2.jpg" alt="">
-                    <p>Project2</p></div>
+                    <p>This Web Site</p></div>
                 <div class="box3">
                     <img src="images/pic3.jpg" alt="">
-                    <p>Project3</p></div>
+                    <p>2048 game</p></div>
                 <div class="box4">
                     <img src="images/pic4.jpg" alt="">
-                    <p>Project4</p></div>
+                    <p>Matrix Web Site</p></div>
                 <div class="box5">
                     <img src="images/pic5.jpg" alt="">
-                    <p>Project5</p></div>
+                    <p>Photography Portfolio</p></div>
                 <div class="box6">
                     <img src="images/pic6.jpg" alt="">
-                    <p>Project6</p></div>
+                    <p>Hardware Related Projects</p></div>
                 <div class="box7">
                     <img src="images/pic7.jpg" alt="">
-                    <p>Project7</p></div>
+                    <p>Mac Specific Project</p></div>
                 <div class="box8">
                     <img src="images/pic8.jpg" alt="">
-                    <p>Project8</p></div>
+                    <p>Random Projects</p></div>
             </div>
         </div>
     </section>
-    <footer>
+    <footer id='contact'>
         <h2>Like what you see?</h2>
         <div class="button">
             <button>Contact Me</button>
