optimized the site for phone and tablet users^C

--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
         <div class="pfp">
             <img src="images/BW_pfp.PNG" alt="">
         </div>
-        <div class="section1b">
+        <div id="projects" class="section1b">
             <div class="lil_about">
                 <h2>Hi! I'm John</h2>
             </div>
             <div class="pj_button">
                 <button>My Projects</button>
             </div>
-                <p>I've been intrested in coding since high school but only as a hobby. It wasn't until the age of 20 that I realized it could be my career, but by then I had a lot of road blocks preventing me from pursuing a career. Now at the age of 25 I'm finally taking the plunge and starting  </p>
+                <p>I've been interested in coding since high school but only as a hobby. It wasn't until the age of 20 that I realized it could be my career, but by then I had a lot of road blocks preventing me from pursuing a career. Now at the age of 25 I'm finally taking the plunge and starting.  </p>
             </div>
         </div>
     </section>
     <section id="projects">
         <div class="container">
             <div class="boxes">
-                <div class="box1">
+                <div >
                     <img src="images/pic1.jpg" alt="">
                     <p>My First Project</p></div>
-                <div class="box2">
+                <div>
                     <img src="images/pic2.jpg" alt="">
                     <p>This Web Site</p></div>
-                <div class="box3">
+                <div>
                     <img src="images/pic3.jpg" alt="">
-                    <p>2048 game</p></div>
-                <div class="box4">
+                    <p>2048 Game</p></div>
+                <div>
                     <img src="images/pic4.jpg" alt="">
                     <p>Matrix Web Site</p></div>
-                <div class="box5">
+                <div>
                     <img src="images/pic5.jpg" alt="">
                     <p>Photography Portfolio</p></div>
-                <div class="box6">
+                <div>
                     <img src="images/pic6.jpg" alt="">
                     <p>Hardware Related Projects</p></div>
-                <div class="box7">
+                <div>
                     <img src="images/pic7.jpg" alt="">
                     <p>Mac Specific Project</p></div>
-                <div class="box8">
+                <div>
                     <img src="images/pic8.jpg" alt="">
                     <p>Random Projects</p></div>
             </div>
